Finalização do serviço core

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 # Habilitando o Console H2
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:coredb
 spring.data.jpa.repositories.bootstrap-mode=default
+# ActiveMQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=
+spring.activemq.password=
